SERVER-64850 Remove unused member variable